precompiles/utils/macro/tests/compile-fail/precompile/discriminant/type-mismatch-1.stderr
error: The discriminant function must only take code address (H160) and remaining gas (u64) as parameters.
  --> tests/compile-fail/precompile/discriminant/type-mismatch-1.rs:25:2
   |
25 |     fn discriminant(address: H160) -> Option<u64> {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
